[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doi_extractor"
version = "0.1.0"
description = "A package to extract DOIs from BibTeX, RIS, and text files"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bibtexparser",
]

[project.urls]
homepage = "https://github.com/yourusername/doi_extractor"

[project.scripts]
doi_extractor = "doi_extractor.extractor:main"

[tool.setuptools.packages.find]
where = ["."]
