[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doi_extractor"
version = "0.1.0"
description = "A package to extract DOIs from BibTeX, and RIS files"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Christian Goelz", email = "c.goelz@gmx.de" }
]
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bibtexparser==2.0.0b7",
]

[project.urls]
homepage = "https://github.com/yourusername/doi_extractor"

[project.scripts]
doi_extractor = "doi_extractor.extractor:main"

[tool.setuptools.packages.find]
where = ["."]
